--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
   <head>
     <meta content="text/html;charset=utf-8" http-equiv="Content-Type" />
     <meta content="utf-8" http-equiv="encoding" />
-    <title>Rizz-Clock</title>
+    <title>Himanshu-Clock</title>
     <link rel="stylesheet" href="index.css" />
   </head>
   <body ondblclick="goFullscreen()">
